syntax = "proto3";
package pbPost;

// ============ 帖子相关接口 ================

// 创建帖子
message CreatePostRequest {
  //  int64 PostID = 1; // 帖子ID  // Tag: validate:"required"
  //  int64 AuthorID = 2; // 作者ID // Tag: validate:"required"
  int64 CommunityID = 1; // 社区ID* // Tag: validate:"required"
  string Title = 2 ; // 帖子标题* // Tag: validate:"required"
  string Content = 3; // 帖子详情 // Tag: validate:"required"
}


// 获取帖子详情
message GetPostDetailRequest {
  int64 PostID = 1 ; // 帖子ID* // Tag: validate:"required,numeric"

}

// 获取帖子列表
message GetPostListRequest{
  // 使用枚举获取访问状态 是根据作者还是社区分类访问
  enum State {
    Community = 0;
    Author = 1;
  }
  State Model = 1; // 查询模式*
  oneof ID {// ID*
    int64 CommunityID = 2;
    int64 AuthorID = 3;
  }
  int64 Page = 4; // 页码 // Tag: validate:"required"
  int64 Max = 5; // 每页最大数 // Tag: validate:"required"
}

// Response:响应
message Response {
  // 响应
  int32 Code = 1 ; // 业务响应状态码
  string Msg = 2; // 提示信息
  map<string, string > Data = 3; // 数据
}



// 服务注册
service Post {
  rpc PostList (GetPostListRequest) returns (Response) {}
  rpc CreatePost(CreatePostRequest)returns(Response){}
  rpc GetPostDetail(GetPostDetailRequest) returns (Response){}
}